# percival-cargo

./: .gitignore  .mypy.ini  .pytest.ini  .ruff.toml  Makefile  README.md  config.py  project.toml  pyproject.toml  setup_db.sql
diagrams/: .$model.drawio.bkp  .$model.drawio.dtmp  model.drawio
docs/source/: conf.py  index.rst
docs/source/domain/: description.rst  glossary.rst  index.rst
src/percival_cargo/: __init__.py  config.py
src/percival_cargo/adapters/: abstract.py  orm.py
src/percival_cargo/application/: __init__.py  abstract.py  exceptions.py  handlers.py  messagebus.py  services.py  unit_of_work.py
src/percival_cargo/domain/: abstract.py  events.py  exceptions.py  interfaces.py  model.py  protocols.py  services.py
src/percival_cargo/domain/interfaces/: model.py  repository.py
src/percival_cargo/domain/ports/: components.py  events.py  model.py  uow.py
src/percival_cargo/entrypoints/: flask_app.py
src/percival_cargo/entryponts/: __init__.py  flask_app.py
src/percival_cargo/entryponts/flask_app/: __init__.py  (+1 more)
src/percival_cargo/infrastructure/: __init__.py  email.py  model_sqlachemy.py  orm.py  orm_sqlachemy.py  repository.py
src/percival_cargo/ports/: __init__.py  model.py  repository.py  uow.py
tests/: conftest.py  test_allocate.py  test_batches.py  test_orm.py  test_product.py  test_repository.py  test_service.py  tools.py
tests/application/: test_services.py
tests/domain/: test_batches.py  test_service.py
tests/e2e/: __init__.py  test_api.py
tests/fake/: __init__.py  repository.py
tests/fixtures/: api.py  date.py  db.py
(+3 files in other folders)
