[project]
name = "percival-cargo"
version = "0.1.0"
description = ""
authors = [
    {name = "Sergei Mikurov",email = "454004@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "percival_cargo", from = "src"}]

[[tool.poetry.source]]
name = "mirror"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "ruff (>=0.15.15,<0.16.0)",
    "mypy (>=2.1.0,<3.0.0)"
]
docs = [
    "sphinx (>=9.1.0,<10.0.0)"
]
